# pism-terra

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  Dockerfile  README.md  environment-dev.yml  environment-run.yml  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  changelog.yml  labeled-pr.yml  release.yml  static-analysis.yml  tag-version.yml  test.yml
config/: atna_chinook.toml  calib_chinook.toml  calib_stampede3.toml  combatantcol_chinook.toml  init_anvil.toml  init_chinook.toml  init_cosipy_chinook.toml  init_local.toml  init_pdd_chinook.toml  init_stampede3.toml  nwgm_chinook.toml  wrangell_chinook.toml  wrangell_trillian.toml
data/: 01_rgi.py
data/rgi/: Chugach_greater_domain.dbf  Chugach_greater_domain.shp  Chugach_greater_domain.shx  Kennicott_greater_domain.prj  Kennicott_greater_domain.shp  Kennicott_greater_domain.shx  atna.gpkg  regions.csv  wrangell.gpkg
docs/: .gitignore  Makefile  conf.py  make.bat
docs/source/: conf.py  forward_modeling.md  index.md  refs.bib
examples/: README.txt  plot_quick_start.py
notebooks/: KITP Analysis.ipynb  KITP-dEBM Calibration.ipynb  agu2025.ipynb  l-curve.ipynb  pism_cloud_animation.ipynb  pism_cloud_app.ipynb  s4f-grids.ipynb
pism_terra/: __init__.py  __main__.py  aws.py  climate.py  colormaps.py  config.py  dem.py  domain.py  download.py  execute.py  filtering.py  grids.py  heatflux.py  interpolation.py  likelihood.py  log.py  observations.py  plotting.py  postprocess.py  prepare_select.py  processing.py  profiles.py  raster.py  run.py  sampling.py  stage.py  validate.py  vector.py  workflow.py
pism_terra/config/: S4F_target_AK_RGI_id.csv  S4F_target_CA_RGI_id.csv  S4F_target_SV_RGI_id.csv  abrupt_chinook.toml  atna_chinook.toml  bm_greenland.toml  bm_greenland_historical.toml  bm_greenland_historical_lowres.toml  calib_chinook.toml  calib_stampede3.toml  combatantcol_chinook.toml  cosipy_m2.toml  era5_chinook.toml  era5_ec2.toml  era5_ec2_1year.toml  era5_inverse_ho.toml  era5_inverse_ssa.toml  era_m2.toml  init_anvil.toml  init_chinook.toml  init_cosipy_chinook.toml  init_local.toml  init_pdd_chinook.toml  init_pdd_ziemen_chinook.toml  init_stampede3.toml  ismip7_greenland.toml  ismip7_greenland_c001.toml  ismip7_greenland_c002.toml  ismip7_greenland_c003.toml  ismip7_greenland_c004.toml  ismip7_greenland_c005.toml  ismip7_greenland_c006.toml  ismip7_greenland_c007.toml  ismip7_greenland_c008.toml  ismip7_greenland_historical.toml  ismip7_greenland_init.toml  ismip7_greenland_ssp126.toml  ismip7_greenland_ssp370.toml  kennicott_chinook.toml  kitp_debm_1yr.toml  (+68 more)
pism_terra/data/: dem_ak.txt
pism_terra/etc/: entrypoint.sh
templates/: anvil.j2  chinook.j2  stampede3.j2
tests/: conftest.py  rgi_test.gpkg  test_config.py  test_data_sources.py  test_dem.py  test_ismip7_counter.py  test_stage.py
uq/: atna.toml  calib.toml  cosipy.toml  er5_agu.toml  nwgm.toml  pdd.toml  pdd_wrf.toml
(+95 files in other folders)
